--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-  <my-counter counter="50"></my-counter>
+ <!-- <my-counter counter="50"></my-counter>
   <script>
     const counterElement = document.querySelector('my-counter');
     counterElement.addEventListener('counterChange', (event) => {
       console.log(`Custom Element的事件值：${event.detail}`);
     });
-  </script>
+  </script>-->
 </body>
 
 </html>
